--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/angular": "^7.0.0",
+    "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.7",
@@ -50,8 +51,8 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint": "^7.20.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~5.1.0",
