--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
-    "@capacitor/keyboard": "^6.0.0",
-    "@capacitor/status-bar": "^6.0.0",
+    "@capacitor/app": "^5.0.8-dev-20240315T155919.0",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/haptics": "^5.0.8-dev-20240315T155919.0",
+    "@capacitor/ios": "5.7.5",
+    "@capacitor/keyboard": "^5.0.9-dev-20240315T155919.0",
+    "@capacitor/status-bar": "^5.0.8-dev-20240315T155919.0",
     "@ionic/angular": "^7.0.0",
     "firebase": "^10.11.1",
     "ionicons": "^7.0.0",
