aplicacion funcionando (revisar edit)

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -20,6 +20,10 @@ end
 target 'App' do
   capacitor_pods
   # Add your Pods here
+
+  # Agrega las dependencias de Firebase
+  pod 'Firebase/Auth'
+  pod 'Firebase/Database'
 end
 
 post_install do |installer|
