--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@capacitor/app": "^5.0.8-dev-20240315T155919.0",
-    "@capacitor/core": "^5.7.0",
     "@capacitor/haptics": "^5.0.8-dev-20240315T155919.0",
-    "@capacitor/ios": "5.7.5",
+    "@capacitor/ios": "^5.7.5",
     "@capacitor/keyboard": "^5.0.9-dev-20240315T155919.0",
     "@capacitor/status-bar": "^5.0.8-dev-20240315T155919.0",
     "@ionic/angular": "^7.0.0",
@@ -46,7 +45,6 @@
     "@angular/cli": "17.3.2",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "^5.7.4",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
