--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@capacitor/app": "^5.0.8-dev-20240315T155919.0",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "^5.0.8-dev-20240315T155919.0",
     "@capacitor/ios": "^5.7.5",
     "@capacitor/keyboard": "^5.0.9-dev-20240315T155919.0",
